<resources>
    <string name="app_name">Tabletop Gang Roster</string>
    <string name="buttonNewGang">Create New Gang</string>
    <string name="buttonManageExistingGang">Manage Existing Gang</string>
    <string name="buttonDeleteExistingGang">Delete Existing Gang</string>
    <string name="selectGangHouse">Select your gang\'s House:</string>
    <string name="enterGangName">Enter your gang\'s name:</string>
    <string name="enterCredits">Enter your starting credits:</string>
    <string name="enterFighterName">Enter your fighter\'s name:</string>
    <string name="enterFighterNameHint">Insert Name Here</string>
    <string name="gangNameHint">Gang Name</string>
    <string name="gangCreditsHint">1000</string>
    <string name="buttonProceed">Proceed</string>
    <string name="title_activity_manage__gang">Manage Gang</string>
    <string name="SelectEditGang">Select Gang Roster to edit:</string>
    <string name="SelectDeleteGang">Select Gang Roster to delete:</string>
    <string name="houseLeadIn">House:</string>
    <string name="stashLeadIn">Stash:</string>
    <string name="repLeadIn">Reputation:</string>
    <string name="turfLeadIn">Turf Size:</string>
    <string name="editStash">Edit Stash</string>
    <string name="editReputation">Edit Reputation</string>
    <string name="editTurfSize">Edit Turf Size</string>
    <string name="saveButton">Save Changes</string>
    <string name="gangRatingLeadIn">Gang Rating:</string>
    <string name="buttonAddFighter">Add Fighter</string>
    <string name="selectFighterType">Select your fighter\'s type:</string>
    <string name="fighterTotalValue">Total Value:</string>
    <string name="fighterMovement">M</string>
    <string name="fighterWeaponSkill">WS</string>
    <string name="fighterBallisticSkill">BS</string>
    <string name="fighterStrength">S</string>
    <string name="fighterToughness">T</string>
    <string name="fighterWounds">W</string>
    <string name="fighterInitiative">I</string>
    <string name="fighterAttacks">A</string>
    <string name="fighterLeadership">LD</string>
    <string name="fighterCool">CL</string>
    <string name="fighterWillpower">WP</string>
    <string name="fighterIntelligence">INT</string>
    <string name="fighterStatBlock">M     WS     BS     S     T     W     I     A     LD     CL     WIL     INT</string>
    <string name="currentWeapons"> Current Weapons: </string>
    <string name="editWeapons"> Edit Weapons </string>
    <string name="currentWargear"> Current Wargear: </string>
    <string name="editWargear"> Edit Wargear </string>
    <string name="currentSkills"> Current Skills: </string>
    <string name="editSkills"> Edit Skills </string>
    <string name="fighterCost"> Fighter Cost: </string>
    <string name="currentXP"> Current XP: </string>
    <string name="editXP"> Edit XP </string>
    <string name="editStats"> Edit Stats </string>
    <string name="addWeapon"> Add Weapon </string>
    <string name="removeWeapon"> Remove Weapon </string>
    <string name="editGangRating"> Edit Gang Rating </string>
    <string name="addSelectedWeapon"> Add Selected Weapon </string>
    <string name="tapWeaponToAdd"> Tap on a weapon to add it. </string>
    <string name="tapWeaponToRemove"> Tap on a weapon to remove it. </string>
    <string name="readyStatus"> Ready Status: </string>
    <string name="ready"> Ready </string>
    <string name="notReady"> Not Ready </string>
    <string name="addSkill"> Add Skill </string>
    <string name="removeSkill"> Remove Skill </string>
    <string name="tapSkillAdd"> Tap on a skill to add it. </string>
    <string name="tapSkillRemove"> Tap on a skill to remove it. </string>
    <string name="tapWargearAdd"> Tap on wargear to add it. </string>
    <string name="tapWargearRemove"> Tap on wargear to remove it. </string>
    <string name="addWargear"> Add Wargear </string>
    <string name="removeWargear"> Remove Wargear </string>
    <string name="movement"> Movement </string>
    <string name="weaponSkill"> Weapon Skill </string>
    <string name="ballisticSkill"> Ballistic Skill </string>
    <string name="strength"> Strength </string>
    <string name="toughness"> Toughness </string>
    <string name="wounds"> Wounds </string>
    <string name="initiative"> Initiative </string>
    <string name="attacks"> Attacks </string>
    <string name="leadership"> Leadership </string>
    <string name="cool"> Cool </string>
    <string name="will"> Will </string>
    <string name="intelligence"> Intelligence </string>
</resources>
