<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="shread.robert.tabletopgangroster.View_Fighter"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/statBlock"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginEnd="159dp"
        android:layout_marginStart="165dp"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewW" />

    <TextView
        android:id="@+id/textViewM"
        android:layout_width="13dp"
        android:layout_height="19dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="6dp"
        android:gravity="center_horizontal"
        android:text="@string/fighterMovement"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textViewWS"
        android:layout_width="21dp"
        android:layout_height="19dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="6dp"
        android:text="@string/fighterWeaponSkill"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textViewM"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textViewS"
        android:layout_width="9dp"
        android:layout_height="19dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="6dp"
        android:text="@string/fighterStrength"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textViewBS"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textViewBS"
        android:layout_width="18dp"
        android:layout_height="19dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="6dp"
        android:text="@string/fighterBallisticSkill"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textViewWS"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textViewT"
        android:layout_width="9dp"
        android:layout_height="19dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="6dp"
        android:text="@string/fighterToughness"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textViewS"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textViewW"
        android:layout_width="13dp"
        android:layout_height="19dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="6dp"
        android:text="@string/fighterWounds"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textViewT"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textViewI"
        android:layout_width="4dp"
        android:layout_height="19dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="6dp"
        android:text="@string/fighterInitiative"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textViewW"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textViewA"
        android:layout_width="10dp"
        android:layout_height="19dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="6dp"
        android:text="@string/fighterAttacks"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textViewI"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textViewLD"
        android:layout_width="17dp"
        android:layout_height="19dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="6dp"
        android:text="@string/fighterLeadership"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textViewA"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textViewCL"
        android:layout_width="17dp"
        android:layout_height="19dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="6dp"
        android:text="@string/fighterCool"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textViewLD"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textViewWP"
        android:layout_width="22dp"
        android:layout_height="19dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="6dp"
        android:text="@string/fighterWillpower"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textViewCL"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textViewINT"
        android:layout_width="24dp"
        android:layout_height="19dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="6dp"
        android:text="@string/fighterIntelligence"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textViewWP"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/currentWeapons"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statBlock" />

    <Button
        android:id="@+id/buttonEditWeapons"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:onClick="clickEditWeapons"
        android:text="@string/editWeapons"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statBlock" />

    <ListView
        android:id="@+id/fighterWeaponList"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/currentWargear"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fighterWeaponList" />

    <Button
        android:id="@+id/buttonEditWargear"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:onClick="clickEditWargear"
        android:text="@string/editWargear"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fighterWeaponList" />

    <ListView
        android:id="@+id/fighterWargearList"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fighterWeaponList" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/currentSkills"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fighterWargearList" />

    <Button
        android:id="@+id/buttonEditSkills"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:onClick="clickEditSkills"
        android:text="@string/editSkills"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fighterWargearList" />

    <ListView
        android:id="@+id/fighterSkillsList"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fighterWargearList" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/currentXP"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fighterSkillsList" />

    <TextView
        android:id="@+id/xpTextView"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/fighterSkillsList" />

    <Button
        android:id="@+id/buttonEditXP"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:onClick="clickEditXP"
        android:text="@string/editXP"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fighterSkillsList" />

    <Button
        android:id="@+id/buttonEditStats"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:onClick="clickEditStats"
        android:text="@string/editStats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:text="@string/readyStatus"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/readyToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginLeft="6dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        android:onClick="clickReadyToggleButton"
        app:layout_constraintStart_toEndOf="@+id/textView18"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
