<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="shread.robert.tabletopgangroster.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/buttonNewGang"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_marginBottom="47dp"
        android:layout_marginTop="73dp"
        android:onClick="clickNewGang"
        android:text="@string/buttonNewGang"
        app:layout_constraintBottom_toTopOf="@+id/buttonManageExistingGang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonManageExistingGang"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_marginBottom="211dp"
        android:layout_marginEnd="102dp"
        android:layout_marginStart="102dp"
        android:onClick="clickManageGang"
        android:text="@string/buttonManageExistingGang"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNewGang" />

    <Button
        android:id="@+id/button2"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_marginBottom="80dp"
        android:layout_marginTop="41dp"
        android:onClick="clickDeleteGang"
        android:text="@string/buttonDeleteExistingGang"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonManageExistingGang" />
</android.support.constraint.ConstraintLayout>
